<resources>
    <string name="app_name">StarTapped</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_out">Sign out</string>
    <string name="data_network"><![CDATA[Data & Network]]></string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_account">Account</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="use_safe_search">Use Safe Search</string>
    <string name="register_username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="action_your_blogs">Your Blogs</string>
    <string name="blog_icon_image">Blog Icon Image</string>
    <string name="blog_background_image">Blog Background Image</string>
    <string name="action_new_blog">New Blog</string>
    <string name="confirm_changes_action">Confirm Changes</string>
    <string name="cancel_action">Cancel</string>
    <string name="_18_only">18+ Only</string>
    <string name="nsfw">NSFW</string>
    <string name="edit">Edit</string>
    <string name="blog_description_hint">Blog description</string>
    <string name="blog_title_hint">Blog Title</string>
    <string name="content_alert">Content Alert</string>
    <string name="adult_only_content_alert_text">This blog does not allow minors to view. Please come back when you are at least 18 years old.</string>
    <string name="go_back">Go back</string>
    <string name="nsfw_content_block_text">This blog is marked as NSFW. Please disable safe search to view this blog.</string>
    <string name="change_settings">Change Settings</string>
    <string name="post_image">Post Image</string>
    <string name="post_video">Post Video</string>
    <string name="reblog_icon">reblog_icon</string>
    <string name="post_source">Source: %s</string>
    <string name="bookmark_post">Bookmark Post</string>
    <string name="reblog_post">Reblog Post</string>
    <string name="create_blog_url_hint">Blog URL   (ex. my-cool-blog.startapped.com)</string>
    <string name="blog_create_url_input_hint">my-cool-blog</string>
    <string name="create_exclaim_button">Create!</string>
    <string name="display_your_age">Display your Age</string>
    <string name="allow_minors_to_view">Allow minors to view</string>
    <string name="is_nsfw">is NSFW</string>
    <string name="error_over_10mb">Files cannot be larger than 10MB</string>
    <string name="error_audio_load_fail">Failed to load audio file.</string>
    <string name="pick_icon_image">Pick Icon Image</string>
    <string name="pick_background_image">Pick Background Image</string>
    <string name="pick_post_image">Pick Post Image</string>
    <string name="pick_post_audio">Pick Post Audio</string>
    <string name="pick_post_video">Pick Post Video</string>
    <string name="action_following">Following</string>
    <string name="following_title">Following</string>
    <string name="action_report">Report</string>
    <string name="action_block">Block</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_share">Share</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_followers">Followers</string>
    <string name="post_create_body_hint">Go on, say something</string>
    <string name="post_create_title_hint">Title, if you want one</string>
    <string name="post_add_tags_hint">Tags, if you want any</string>
    <string name="post_add_tags">Add Tags</string>
    <string name="post">Post</string>
    <string name="post_tags">Tags: %s</string>

    <string name="select_media_type_audio">Audio</string>
    <string name="error_bad_return">Something bad was returned. Please try again.</string>
    <string name="no_more_posts">There\'s no more posts.</string>

    <string name="title_activity_hub_rewrite">Hub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_hub">Hub</string>
    <string name="menu_search">Search</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_blogs">Your Blogs</string>
    <string name="menu_following">Following</string>
    <string name="menu_settings">Settings</string>
    <string name="drawer_header_title">StarTapped</string>
    <string name="drawer_header_subtitle">A Blogging Platform for All</string>

    <string name="search_nothing">You can\'t search for nothing</string>
    <string name="search_toolbar">Search StarTapped</string>
    <string name="search_hint">Search StarTapped</string>
    <string name="menu_bookmarks">Bookmarks</string>
</resources>
