<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hub"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_hub" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/baseline_explore_24"
            android:title="@string/menu_explore" />
    </group>

    <item android:title="@string/settings_account">
        <menu>
            <item
                android:id="@+id/nav_blogs"
                android:icon="@drawable/baseline_list_24"
                android:title="@string/menu_blogs" />
            <item
                android:id="@+id/nav_following"
                android:icon="@drawable/baseline_forward_24"
                android:title="@string/menu_following" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
