<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.blog.self.BlogEditActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/blog_background_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:clickable="false"
        android:contentDescription="@string/blog_background_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:src="@tools:sample/backgrounds/scenic[17]"
        tools:srcCompat="@tools:sample/backgrounds/scenic[17]" />

    <ImageView
        android:id="@+id/blog_icon_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:clickable="false"
        android:contentDescription="@string/blog_icon_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blog_background_image"
        tools:src="@tools:sample/avatars"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/change_background_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_edit_filled"
        app:layout_constraintEnd_toEndOf="@+id/blog_background_image"
        app:layout_constraintTop_toTopOf="@+id/blog_background_image" />

    <Button
        android:id="@+id/change_icon_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_edit_filled"
        app:layout_constraintEnd_toEndOf="@+id/blog_icon_image"
        app:layout_constraintTop_toTopOf="@+id/blog_icon_image" />

    <TextView
        android:id="@+id/blog_url"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="textStart"
        android:textColor="@color/Link"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blog_background_image"
        tools:ignore="KeyboardInaccessibleWidget"
        tools:text="blog-url" />

    <EditText
        android:id="@+id/blog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/blog_title_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/Primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blog_icon_image"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/blog_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/blog_description_hint"
        android:inputType="text|textMultiLine"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/Dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blog_title"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/nsfw_badge"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/Danger"
        android:clickable="false"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/nsfw"
        android:textAlignment="center"
        android:textColor="@color/Light"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blog_background_image" />

    <TextView
        android:id="@+id/adult_only_badge"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/Danger"
        android:clickable="false"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/_18_only"
        android:textAlignment="center"
        android:textColor="@color/Light"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/nsfw_badge"
        app:layout_constraintTop_toBottomOf="@+id/blog_background_image" />

    <TextView
        android:id="@+id/age_badge"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="8dp"
        android:background="@color/Danger"
        android:clickable="false"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textColor="@color/Light"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="@+id/blog_icon_image"
        app:layout_constraintTop_toTopOf="@+id/blog_icon_image"
        tools:text="18" />

    <CheckBox
        android:id="@+id/nsfw_check_box"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/is_nsfw"
        android:textAlignment="viewStart"
        android:textColor="@color/Dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blog_description" />

    <CheckBox
        android:id="@+id/allow_minors_check_box"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/allow_minors_to_view"
        android:textAlignment="viewStart"
        android:textColor="@color/Dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nsfw_check_box" />

    <CheckBox
        android:id="@+id/display_age_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/display_your_age"
        android:textAlignment="viewStart"
        android:textColor="@color/Dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allow_minors_check_box" />
</androidx.constraintlayout.widget.ConstraintLayout>
