<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="234dp"
        android:layout_height="66dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="75dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Light"
        android:textSize="40sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="67dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/Dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="@color/Dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInEmail"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        android:background="@color/Light"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPassword" />

    <View
        android:id="@+id/divider"
        android:layout_width="125dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <View
        android:id="@+id/divider2"
        android:layout_width="125dp"
        android:layout_height="1dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="23dp"
        android:layout_height="25dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="184dp"
        android:text="Or"
        android:textAllCaps="true"
        android:textColor="@color/Dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/Light"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="@color/Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>